2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Fix compiler cast warning.
	* lib/Database.cpp: Likewise.
	* lib/Driver.cpp: Fix iterator not using a reference.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Fix SQL for FeatureInstance table creation.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	Remove the original GCC plugin

	* CMakeLists.txt: Remove gcc_plugin from the build system.
	* gcc_plugin/.gitignore: Deleted file.
	* gcc_plugin/AUTHORS: Likewise.
	* gcc_plugin/CMakeLists.txt: Likewise.
	* gcc_plugin/COPYING: Likewise.
	* gcc_plugin/ChangeLog: Likewise.
	* gcc_plugin/FeatureExtract.cpp: Likewise.
	* gcc_plugin/Features.h: Likewise.
	* gcc_plugin/GCCCallbacks.cpp: Likewise.
	* gcc_plugin/GCCPlugin.cpp: Likewise.
	* gcc_plugin/MAGEECPlugin.h: Likewise.
	* gcc_plugin/Parameters.h: Likewise.
	* gcc_plugin/README: Likewise.

2016-07-15  Edward Jones  <ed.jones@embecosm.com>

	* script/generate-build.py: Make reslient to failures when a
	benchmark is being generated.

2016-07-15  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Add PassSeqParameter attribute, a
	parameter which represents the passes executed during the compile.
	* include/mageec/Database.h (Database::newPassSequence): Delete
	method, pass sequences are now expressed as a parameter.
	(Database::newCompilation): Remove pass_sequence parameter.
	* include/mageec/Decision.h: Rename PassList to PassSeq
	* include/mageec/Result.h (Result::m_pass_sequence): Remove member.
	(Result::m_pass_features): Likewise.
	(Result::getPassSequence): Remove method.
	(Result::getPassParameters): Likewise.
	(Result::getFeaturesAfterPass): Likewise.
	(Result::addPass): Likewise.
	(Result::addFeatures): Likewise.
	* include/mageec/Types.h: Rename kPassList to kPassSeq.
	(ParameterType): Add kPassSeq enumeration value.
	(PassID PassSequenceID): Add enumerations.
	* lib/Database.cpp: Remove FeatureType, ParameterType, and